updated css for search bar components to fit figma style, fixed BackHeader arrow and text alignment

--- a/src/Components/BackHeader/BackHeader.css
+++ b/src/Components/BackHeader/BackHeader.css
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2vh 4vw;
+  padding: 6vh 4vw 1vh 4vw;
 }
 
 .back-title-container h1 {
   padding-right: 40%;
+  padding-bottom: 0rem;
 }
