--- a/src/Components/MealOfTheDay/MealOfTheDay.css
+++ b/src/Components/MealOfTheDay/MealOfTheDay.css
@@ -4,7 +4,7 @@
 
 .motd-section h2 {
   margin-left: 5vw;
-  margin-top: 3vh;
+  margin-top: 1vh;
 }
 
 .motd-card {
