--- a/src/Components/SearchbarTwo/SearchbarTwo.css
+++ b/src/Components/SearchbarTwo/SearchbarTwo.css
@@ -5,12 +5,12 @@
 .searchbar-box {
   display: flex;
   align-items: center;
-  padding: 1.5vw;
-  border-radius: 10px;
+  padding: 0.8rem;
+  border-radius: 1rem;
   width: 90%;
-  -webkit-box-shadow: 0px 0px 7px 0px #000000;
-  box-shadow: 0px 0px 7px 0px #000000;
+  border: 2px solid #e6ebf2;
   cursor: pointer;
+  margin-bottom: 1vh;
 }
 .searchbar-box input {
   border: none;
